--- a/cli-music.cabal
+++ b/cli-music.cabal
@@ -4,13 +4,13 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ac59ab339fa1a51be49ccf656608354c13dd0ee16f8f7a54f7b87a0bab5fed7e
+-- hash: 75cc29b4a677303e2ea06844ec41bb9ed3c076ddd53e9c3eca6eda38b66caa71
 
-name:           audio
+name:           cli-music
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/CornCobs/audio#readme>
-homepage:       https://github.com/CornCobs/audio#readme
-bug-reports:    https://github.com/CornCobs/audio/issues
+description:    Please see the README on GitHub at <https://github.com/CornCobs/cli-music#readme>
+homepage:       https://github.com/CornCobs/cli-music#readme
+bug-reports:    https://github.com/CornCobs/cli-music/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2020 Author name here
@@ -23,7 +23,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/CornCobs/audio
+  location: https://github.com/CornCobs/cli-music
 
 library
   exposed-modules:
@@ -31,7 +31,7 @@ library
       Sound
       Types
   other-modules:
-      Paths_audio
+      Paths_cli_music
   hs-source-dirs:
       src
   build-depends:
@@ -41,33 +41,33 @@ library
     , text
   default-language: Haskell2010
 
-executable audio-exe
+executable cli-music
   main-is: Main.hs
   other-modules:
-      Paths_audio
+      Paths_cli_music
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      audio
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
+    , cli-music
     , parsec
     , text
   default-language: Haskell2010
 
-test-suite audio-test
+test-suite cli-music-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_audio
+      Paths_cli_music
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      audio
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
+    , cli-music
     , parsec
     , text
   default-language: Haskell2010
